fix the bug which the page can be scrolled
It seems that the page is a little bit too long so it can be scrolled.
Remove the body margin then fine.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    margin: 0px;
     height: 100vh;
     display: flex;
     justify-content: center;
